# adventofcode2022.rs

./: Cargo.toml  README.md  runall.sh
src/: day01.rs  day02.rs  input.rs  lib.rs  main.rs
src/space_2D/: grid.rs  mod.rs  point.rs  vec_grid.rs
